browser/scss/dashboard/main.scss
@import '../color';
@import 'categories';
.dashboard-wrapper {
    height: 100%;
    overflow: hidden;
}

.report-snippet-wrapper {
    height: 100%;
}

.dashboard-ui-view-wrapper {
    ui-view {
        height: 100%;
    }
}

div.dashboard-ui-view-wrapper {
    height: 100%;
}

.rg-right {
    margin-right: 0px;
    border-top: none;
    border-bottom: none;
    border-left: 1px solid #e6e3e3;
    background-color: $extremely-light-grey;
}

.add-snippet-btn-col {
    justify-content: flex-end;
}

.add-snippet-btn {
    align-self: flex-end;
    :hover {
        -webkit-transform: scale(1) rotate(360deg);
        transform: scale(1) rotate(360deg);
    }
}

#search-popup {
    width: 300px;
}

.report-container::-webkit-scrollbar-track {
    background-color: $extremely-light-grey;
}

.report-container::-webkit-scrollbar {
    width: 8px;
    height: 3px;
    background-color: $extremely-light-grey;
}

.report-container::-webkit-scrollbar-thumb {
    background-color: #BDBDBD;
}

.snippet-container::-webkit-scrollbar-track {
    background-color: $extremely-light-grey;
}

.snippet-container::-webkit-scrollbar {
    width: 8px;
    height: 3px;
    background-color: $extremely-light-grey;
}

.snippet-container::-webkit-scrollbar-thumb {
    background-color: #BDBDBD;
}

.report-container {
    .parent {
        md-card:first-of-type {
            margin-left: 0;
        }
    }
    overflow-y: scroll;
    margin-bottom: 5px;
}

.snippet-container {
    height: 100%;
    overflow-y: scroll;
}

.split-view-title {
    margin: 5px 0;
}

.split-view-title md-icon,
.split-view-title md-icon {
    cursor: pointer;
    *:active {
        outline: none;
    }
}

.split-view-title md-icon i.material-icons {
    &:after {
        content: "zoom_out_map";
    }
}
.split-view-title md-icon i.material-icons.expanded {
    &:after {
        content: "remove";
    }
}


snippet {
    width: 100%;
}

md-expansion-panel-group[md-component-id='report-panel'] {
    cursor: move;
}

md-expansion-panel-group[md-component-id='team-panel'] {
    cursor: pointer;
    md-expansion-panel-content {
        .md-summary,
        .md-title {
            cursor: text;
        }
    }
}

#dateNav {
    margin-top: 0px;
    background-color: #eaeaec;
    width: 100%;
    display: block;
    cursor: pointer;
    margin-bottom: 10px;
    border-radius: 10px;
    .left-one,
    .right-one {
        padding: 5px;
    }
    .right-one {
        float: right;
    }
    span {
        display: inline-block;
        align: center;
        width: 84%;
        position: absolute;
        text-align: center;
        top: 25px;
    }
}

#export-box {
    width: 100%;
    height: 150px;
    border-radius: 8px;
    transition: all .5s ease;
    opacity: 0;
    background-color: #eaeaec;
    border: 3px steelblue dashed;
    position: relative;
    bottom: -20px;
    span {
        font-size: 40px;
        opacity: .1;
        text-align: center;
        width: 100%;
        display: block;
        position: absolute;
        top: 40px;
    }
}

#export-box.ui-droppable-active {
    transition: all .5s ease;
    opacity: 1;
}

#export-button {
    margin-top: 10px;
    width: 40px;
}

